force-app/main/default/objects/SDO_Service_Conversation_Helper__c.object
<CustomObject>
    <description>What: Used by the Service Team to hold Conversation Helper data
Who: Service Cloud Team</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Listen to Agent utterances for value</description>
        <inlineHelpText>Do we listen for the Value word inside the Agents input/message?</inlineHelpText>
        <label>Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Listen to Customer utterances for value</description>
        <inlineHelpText>Do we listen for the Value word inside the Customers input/message?</inlineHelpText>
        <label>Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recommended_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What recommendation to show in the NBA when this helper is triggered</description>
        <inlineHelpText>What recommendation to show in the NBA when this helper is triggered</inlineHelpText>
        <label>Recommended Action</label>
        <referenceTo>Recommendation</referenceTo>
        <relationshipLabel>Conversation Helpers</relationshipLabel>
        <relationshipName>Conversation_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value to look for in the conversation - looks for this exact word to be somewhere in the transcript/message</description>
        <inlineHelpText>The value to look for in the conversation - looks for this exact word to be somewhere in the transcript/message</inlineHelpText>
        <label>Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Conversation Helper</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Value__c</columns>
        <columns>Recommended_Action__c</columns>
        <columns>Customer__c</columns>
        <columns>Agent__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conversation Helper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversation Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>